# autogoal

./: .all-contributorsrc  .bashrc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  LICENSE  Pipfile  Readme.md  _test_algorithm.py  bash.bashrc  cpu.dockerfile  demo.py  docker-compose.yml  dockerfile  entrypoint.sh  experiment1.py  experiment2.py  experiment3.py  generate_contrib_images.ps1  generate_contrib_images.sh  generate_full_image.ps1  generate_full_image.sh  gpu.dockerfile  hyperopt_small_imdb_result.p  main.py  makefile  mkdocs-base.yml  mkdocs.yml  pyproject.toml  setup.py  stackingEnsemble.py  testing.ipynb  tt.py
autogoal/: __init__.py  __main__.py  autogoal.owl  demo.py  exceptions.py  pyproject.toml
autogoal/_old/_ontology/: __init__.py  __main__.py  _adapters.py  _keras.py  _nltk.py  _nn.py  _sklearn.py  automl.py  base.py  data.py  grammar.py  graph.py  ontology.py
autogoal/_old/_optimization/: base.py  ge.py  sklearn.py  utils.py
autogoal/autogoal/: __init__.py  __main__.py
autogoal/autogoal/contrib/: __init__.py  _utils.py  registered-contribs.yml
autogoal/autogoal/datasets/: __init__.py  _dataset.py  abalone.py  ag_news.py  amazon_reviews.py  cars.py  cifar10.py  dbpedia.py  dorothea.py  dummy.py  german_credit.py  gisette.py  haha.py  imdb_50k_movie_reviews.py  intentes.py  intentsemo.py  meddocan.py  movie_reviews.py  rotten_tomatoes.py  semeval_2023_task_8_1.py  sst2.py  wine_quality.py  yelp_reviews.py
autogoal/autogoal/experimental/: __init__.py  stacking.py
autogoal/autogoal/grammar/: _cfg.py  _functional.py  _graph.py
autogoal/autogoal/kb/: __init__.py  _algorithm.py  _semantics.py  _utils.py
autogoal/autogoal/logging/: __init__.py
autogoal/autogoal/meta_learning/: __init__.py  _experience.py  _logging.py  base.py  example_datasets.py  example_systems.py  sampling.py  utils.py  warm_start.py
autogoal/autogoal/ml/: __init__.py  _automl.py  metrics.py  utils.py
autogoal/autogoal/sampling/: __init__.py
autogoal/autogoal/search/: __init__.py  _base.py  _learning.py  _nspge.py  _pge.py  _random.py  _warm_start_pge.py
autogoal/autogoal/utils/: __init__.py  _dependency_resolver.py  _dynamic.py  _helpers.py  _package_helper.py  _process.py  _process_spy.py  _resource.py  _server.py  _storage.py
autogoal/contrib/: __init__.py  _wrappers.py  division.py  wrappers.py
autogoal/contrib/alphazero/: Agent.py  Connect4Game.py  Connect4_Test.py  GameInterface.py  GameManager.py  MCTS.py  NNetInterface.py  NeuralNet.py  TicTacToeGame.py  TicTacToe_Test.py  _algorithm.py  _metrics.py  _semantics.py  config.py  ramdomAgent.py
autogoal/contrib/audio/: __init__.py  _base.py  _generated.py
autogoal/contrib/division/: division.py
autogoal/contrib/ensemble/: __init__.py  _stacking.py
autogoal/contrib/gensim/: __init__.py  _base.py  _data.py  requirements.txt
autogoal/contrib/hmmlearn/: _base.py
autogoal/contrib/keras/: __init__.py  _base.py  _crf.py  _generated.py  _grammars.py  requirements.txt
autogoal/contrib/keras_hierarchical/: __init__.py  _base.py  _crf.py  _generated.py  _grammars.py
autogoal/contrib/nlp/: _builder.py  _manual.py  _pipeline.py
autogoal/contrib/nltk/: __init__.py  _builder.py  _data.py  _generated.py  _manual.py  _pipeline.py  _utils.py  requirements.txt
autogoal/contrib/re/: __init__.py
autogoal/contrib/regex/: __init__.py
autogoal/contrib/sklearn/: __init__.py  _builder.py  _generated.py  _manual.py  _pipeline.py  _utils.py  requirements.txt
autogoal/contrib/spacy/: __init__.py  _base.py  requirements.txt
autogoal/contrib/streamlit/: __init__.py  demo.py
autogoal/contrib/telegram/: __init__.py
autogoal/contrib/torch/: __init__.py  _bert.py
autogoal/contrib/transformers/: __init__.py  _bert.py  requirements.txt
autogoal/contrib/wikipedia/: __init__.py  _base.py  requirements.txt
autogoal/datasets/: __init__.py  __main__.py  abalone.py  cars.py  cifar10.py  dbpedia.py  dorothea.py  dummy.py  german_credit.py  gisette.py  haha.py  imdb.py  meddocan.py  mnist.py  movie_reviews.py  newsgroup20.py  revolico.py  shuttle.py  wine_quality.py  yeast.py
autogoal/datasets/ehealthkd20/: __init__.py  _encoding.py  _tools.py  _utils.py
autogoal/docs/: cli.md  contributing.md  dependencies.md  index.md
autogoal/docs/demo/: index.html
autogoal/docs/guide/: .gitignore  index.md
autogoal/docs/shell/: autogoal_example.py  printshell.py
autogoal/examples/: basic_grammar.py  bert.py  graph_grammar.py  keras.py  keras_simple_grammar.py  keras_text_classifier.py  nn_grammar.py  sklearn_simple_grammar.py
autogoal/experimental/: __init__.py  _server.py  automl.py  exact_sampler.py  hyperopt_search.py  hyperopt_test.py  keras_presets.py  pipeline.py  semantics.py  stacking.py
autogoal/experimental/DeepFace/: main.py
autogoal/experimental/alphazero/: Agent.py  GameInterface.py  GameManager.py  MCTS.py  NNetInterface.py  NeuralNet.py  __init__.py  config.py  readme.txt
autogoal/experimental/audio_command_recognition/: dockerfile
autogoal/experimental/augly/: __init__.py  _image.py  _semantics.py  _text.py  _utils.py  dockerfile  example.py  image.py  readme.md  test.py  test_augly.py
autogoal/experimental/augly_tony/: Readme.md  __init__.py  example.py
autogoal/grammar/: __init__.py  _base.py  _cfg.py  _functional.py  _grammar.py  _graph.py
autogoal/kb/: __init__.py  _algorithm.py  _data.py  _semantics.py
autogoal/logging/: __init__.py
autogoal/ml/: __init__.py  _automl.py  _metalearning.py  metrics.py  utils.py
autogoal/ontology/: __init__.py  _keras.py  _nltk.py  _nn.py  _sklearn.py  automl.py  base.py  grammar.py  graph.py  ontology.py
autogoal/optimization/: __init__.py  base.py  ge.py  sklearn.py  utils.py
autogoal/sampling/: __init__.py
autogoal/search/: __init__.py  _base.py  _nspge.py  _pge.py  _random.py  moo_utils.py
autogoal/tests/: tests.dockerfile
autogoal/utils/: __init__.py  _cache.py  _dependency_resolver.py  _dynamic.py  _helpers.py  _pickle.py  _process.py  _resource.py  _server.py  _storage.py  process.py  resource_manager.py
(+790 files in other folders)
