[tool.poetry]
name = "autogoal"
version = "0.2"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>"]
description = "Automatic Generation Optimization And Learning"
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
enlighten = "^1.4.0"
fire = "^0.2.1"
networkx = "^2.4"
psutil = "^5.6.7"
pyyaml = "^5.2"
termcolor = "^1.1.0"
toml = "^0.10.0"
pydot = "^1.4.1"
scipy = "^1.5.2"
numpy = "^1.19.2"
tqdm = "^4.50.2"

# Contrib dependencies
gensim = { version = "^3.8.1", optional = true }
keras = { version = "^2.3.1", optional = true }
nltk = { version = "^3.4.5", optional = true }
scikit-learn = { version = "^0.22", optional = true }
seqlearn = { version = "^0.2", optional = true }
sklearn_crfsuite = { version = "^0.3.6", optional = true }
spacy = { version = "^2.2.3", optional = true }
streamlit = { version = "^0.59.0", optional = true }
transformers = { version = "^2.3.0", optional = true }
wikipedia = { version = "^1.4.0", optional = true }
python-telegram-bot = { version = "^12.4.2", optional = true }
jupyterlab = { version = "^1.2.4", optional = true }
nx_altair = { version = "^0.1.4", optional = true }

# Development dependencies
mypy = { version = "^0.761", optional = true }
pylint = { version = "^2.4.4", optional = true }
pytest = { version = "^5.3.2", optional = true }
pytest-cov = { version = "^2.8.1", optional = true }
codecov = { version = "^2.0.15", optional = true }
mkdocs = { version = "^1.0.4", optional = true }
mkdocs-material = { version = "^4.6.0", optional = true }
markdown-include = { version = "^0.5.1", optional = true }

[tool.poetry.extras]
# Individual contrib packages
gensim = ["gensim"]
keras = ["keras"]
nltk = ["nltk"]
sklearn = ["scikit-learn", "seqlearn", "sklearn_crfsuite"]
spacy = ["spacy"]
streamlit = ["streamlit", "nx_altair"]
telegram = ["python-telegram-bot"]
torch = ["pytorch"]
wikipedia = ["wikipedia"]

# Development packages
dev = [
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "codecov",
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
]

# Bundle for all contrib packages
contrib = [
    "gensim",
    "keras",
    "nltk",
    "scikit-learn",
    "seqlearn",
    "sklearn_crfsuite",
    "spacy",
    "streamlit",
    "transformers",
    "wikipedia",
    "python-telegram-bot",
    "jupyterlab",
    "nx_altair",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
