[tool.poetry]
name = "autogoal"
version = "0.3.1"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>"]
description = "Automatic Generation Optimization And Learning"
license = "MIT"
readme = "Readme.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
enlighten = "^1.4.0"
networkx = "^2.4"
numpy = "^1.19.2"
psutil = "^5.6.7"
pydot = "^1.4.1"
pyyaml = "^5.2"
scipy = "^1.5.2"
termcolor = "^1.1.0"
toml = "^0.10.0"
tqdm = "^4.50.2"
typer = "^0.3.2"

# Contrib dependencies
gensim = { version = "^3.8.1", optional = true }
jupyterlab = { version = "^1.2.4", optional = true }
keras = { version = "^2.3.1", optional = true }
nltk = { version = "^3.4.5", optional = true }
nx_altair = { version = "^0.1.4", optional = true }
python-telegram-bot = { version = "^12.4.2", optional = true }
scikit-learn = { version = "^0.22", optional = true }
seqlearn = { version = "^0.2", optional = true }
sklearn_crfsuite = { version = "^0.3.6", optional = true }
spacy = { version = "^2.2.3", optional = true }
streamlit = { version = "^0.59.0", optional = true }
transformers = { version = "^2.3.0", optional = true }
wikipedia = { version = "^1.4.0", optional = true }

# Development dependencies
codecov = { version = "^2.0.15", optional = true }
markdown-include = { version = "^0.5.1", optional = true }
mkdocs = { version = "^1.0.4", optional = true }
mkdocs-material = { version = "^4.6.0", optional = true }
mypy = { version = "^0.761", optional = true }
pylint = { version = "^2.4.4", optional = true }
pytest = { version = "^5.3.2", optional = true }
pytest-cov = { version = "^2.8.1", optional = true }

[tool.poetry.extras]
# Individual contrib packages
gensim = ["gensim"]
keras = ["keras"]
nltk = ["nltk"]
sklearn = ["scikit-learn", "seqlearn", "sklearn_crfsuite"]
spacy = ["spacy"]
streamlit = ["streamlit", "nx_altair"]
telegram = ["python-telegram-bot"]
torch = ["pytorch"]
wikipedia = ["wikipedia"]

# Development packages
dev = [
    "codecov",
    "markdown-include",
    "mkdocs-material",
    "mkdocs",
    "mypy",
    "pylint",
    "pytest-cov",
    "pytest",
]

# Bundle for all contrib packages
contrib = [
    "gensim",
    "jupyterlab",
    "keras",
    "nltk",
    "nx_altair",
    "python-telegram-bot",
    "scikit-learn",
    "seqlearn",
    "sklearn_crfsuite",
    "spacy",
    "streamlit",
    "transformers",
    "wikipedia",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
