[tool.poetry]
name = "autogoal"
version = "1.0.1a1"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
description = "Automatic Generation Optimization And Learning"
license = "MIT"
readme = "Readme.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal"
packages = [{include = "autogoal"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.9.13,<3.10"
pytest = "^7.2.1"
numpy = "^1.21.6"
psutil = "^5.9.4"
PyYAML = "^6.0"
black = "^22.12.0"
enlighten = "^1.11.1"
pandas = "^1.1.3"
pydot = "^1.4.2"
scipy = "1.6"
termcolor = "^2.2.0"
toml = "^0.10.2"
tqdm = "^4.64.1"
typer = "^0.7.0"
rich = "^13.2.0"
Cython = "^0.29.33"
networkx = "^2.4"
dill="^0.3.6"
yamlable = "^1.1.1"
Deprecated = "^1.2.13"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
